feat : 메인페이지 완성, 공통컴포넌트 추가(Button,LogoBox,Background)

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,6 +41,8 @@ body,
   --color-primary-black: #222222;
   --color-primary-white: #ffffff;
   --color-opacity-blue: #eef7fe;
+  --color-btn-blue: #78beff;
+  --color-background-blue: #a8d1f7;
 }
 html,
 body,
