feat : userhome페이지 생성, 버튼 이미지 추가

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,7 +45,7 @@ body,
   --color-primary-gray: #707070;
   --color-primary-black: #222222;
   --color-primary-white: #ffffff;
-  --color-opacity-blue: #eef7fe;
+  --color-opacity-blue: #78beff47;
   // 겹치는 색상 검색 후 위 변수명으로 통일할것
   --color-btn-blue: #78beff;
   --color-background-blue: #a8d1f7;
