--- a/src/App.scss
+++ b/src/App.scss
@@ -137,7 +137,7 @@ video {
   font-size: 100%;
   box-sizing: border-box;
   font: inherit;
-  vertical-align: baseline;
+  // vertical-align: baseline;
   font-family: "NanumSquareRound Light", sans-serif; // 기본 폰트로 NanumSquareRound Light 설정
 }
 /* HTML5 display-role reset for older browsers */
