style : 사이드 스타일2 css 색 수정
// 사이드 스타일2 라는 주석으로 구분하였음
이전 스타일로 변경 시 해당 주석이 있는 부분을 바꾸면 됨

--- a/src/App.scss
+++ b/src/App.scss
@@ -42,7 +42,9 @@ body,
   --color-secondary-grey: #b4abab;
   --color-primary-green: #78ff96;
   --color-primary-navy: #1e22bf;
+  --color-primary-red: #f35d5dde;
   --color-primary-gray: #707070;
+  --color-primary-lightGrey: #edebeb;
   --color-primary-black: #222222;
   --color-primary-white: #ffffff;
   --color-opacity-blue: #78beff47;
