feat : css 수정 및 이미지 추가

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,6 +36,7 @@ body,
   // 자주 쓰는 색상코드 정리 : 장점 : 일괄 색 변경이 편리하다
   --color-primary-blue: #a8d1f7;
   --color-secondary-blue: #78beff;
+  --color-secondary-paleBlue: #f8fcff;
   --color-primary-violet: #9378ff;
   --color-secondary-violet: #b8a7ff;
   --color-primary-grey: #edecec;
